# mosamatic

./: MANIFEST.in  README.md  TODO.md  build_executable.py  create-users.txt  docker-compose.yml  docker-entrypoint.sh  dockerfile  main.py  pyproject.toml  requiments.txt  requirements-web.txt  requirements.txt
mosamatic/: cli.py  controller.py  main.py  model.py  processing.py  view.py
mosamatic/core/: controller.py
mosamatic/processing/: decompress_dicom.py
mosamatic/ui/: base.py
nginx/: nginx.conf
scripts/: deploy.bat
src/mosamatic/core/: __init__.py  dicom.py  processing.py
src/mosamatic/desktop/: graphicsview.py  main.py  mainwindow.py  utils.py
src/mosamatic/experiments/: graphicsview.py  vtk.py
src/mosamatic/old/: main.py
src/mosamatic/resources/: 01_001.dcm
src/mosamatic/resources/icons/: readme.txt
src/mosamatic/test/: drawing.py  graphicsview.py  main.py  multiprocessing.py
src/mosamatic/web/mosamatic/: manage.py
src/mosamatic/web/mosamatic/app/: admin.py  apps.py  backend.py  models.py  urls.py  views.py
src/mosamatic/web/mosamatic/app/management/commands/: load_task_types.py
src/mosamatic/web/mosamatic/app/migrations/: 0001_initial.py
src/mosamatic/web/mosamatic/app/tasks/: __init__.py
src/mosamatic/web/mosamatic/app/templates/: base.html  dataset.html  datasets.html  task.html  tasks.html  viewer.html
src/mosamatic/web/mosamatic/app/templatetags/: extra_filters.py  js.py
src/mosamatic/web/mosamatic/mosamatic/: asgi.py  settings.py  urls.py  wsgi.py
src/test/: main.py
(+22 files in other folders)
